<resources>
    <string name="app_name">Vocallab Avatar Mobile</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_logout">Sair</string>
    <string name="logout_problem">Problema ao deslogar da aplicação</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="WSUrl">blocks/avatar/avatar_mobile.php</string>
    <string name="bar">/</string>
    <string name="token">tk</string>
	<string name="expiration">exp</string>
    <string name="empty"></string>
    <string name="loading">Carregando Mensagens e Notificações</string>
    <string name="url_moodle">URL Moodle</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="logging">Logando</string>
    <string name="login_erro">Url, Usuário ou Senha Incorretos.\nFavor tente novamente</string>
    <string name="cursos">Cursos</string>
    <string name="course_no_message">Nenhuma Mensagem ou Noficação!</string>
    <string name="course_message">Ultimas mensagens para você</string>
    <string name="course_new_message">Existem novas mensagens ou noficicações para você!</string>
    <string name="adm_no_message">Nenhuma Mensagem para você!</string>
    <string name="adm_message">Ultima mensagem para você!</string>
    <string name="adm_new_message">Existe uma nova mensagem para você!</string>
    <string name="admin">Administrador</string>
    <string name="configuracoes">Configurações</string>
	<string name="no_messages">Não existe mensagem para você</string>
	<string name="no_warning">Não existe aviso para você</string>
    <string name="geral">Geral</string>
    <string name="url_padrao">URL</string>
    <string name="usuario_padrao">Usuário</string>
    <string name="url_subtitle">URL da instituição de ensino</string>
    <string name="usuario_subtitle">Usuário ativo</string>
    <string name="erase">Apagar dados</string>
    <string name="datas_de_atividades">Datas de atividades</string>
    <string name="datas_de_atividades_sub">Configure mensangens sobre datas de atividades</string>
    <string name="notificacoes">Notificações</string>
    <string name="novas_atividades">Novas Atividades</string>
    <string name="novas_atividades_subtitle">Configure o recebimento de novas atividades</string>
    <string name="mensagens_do_prof">Mensagens do professor</string>
    <string name="mensagens_do_prof_subtitle">Configure o recebimento de mensagens</string>
    <string name="novos_materiais">Novos Materiais</string>
    <string name="novos_materiais_subtitle">Configure alerta de novos materiais</string>
    <string name="atualizacao">Atualização do App</string>
    <string name="atualizacao_subtitle">Configure a atualização da app</string>
    <string name="fromteacher">Professor: %s</string>
    <string name="aviso">Aviso</string>
    <string name="msg">Mensagem</string>
    <string name="meus_cursos">Meus cursos</string>
    <string name="click_to_play">Clique no icone para ouvir o aviso ou mensagem</string>
</resources>